--- a/src/styles.css
+++ b/src/styles.css
@@ -72,3 +72,60 @@ button:enabled {
 .font-bebas {
   font-family: "Bebas Neue", sans-serif;
 }
+
+@keyframes explosion {
+  0% {
+    transform: scale(0) rotate(-10deg);
+    opacity: 1;
+  }
+  15% {
+    transform: scale(1.2) rotate(5deg);
+    opacity: 1;
+  }
+  70% {
+    transform: scale(1.2) rotate(-3deg);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.5) rotate(0deg);
+    opacity: 0;
+  }
+}
+
+@keyframes fireLeft {
+  0% {
+    transform: translateY(-50%) scale(0);
+    opacity: 1;
+  }
+  15% {
+    transform: translateY(-50%) scale(1.5);
+    opacity: 1;
+  }
+  70% {
+    transform: translateY(-50%) scale(1.5);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-100%) translateX(-20px) scale(2);
+    opacity: 0;
+  }
+}
+
+@keyframes fireRight {
+  0% {
+    transform: translateY(-50%) scale(0);
+    opacity: 1;
+  }
+  15% {
+    transform: translateY(-50%) scale(1.5);
+    opacity: 1;
+  }
+  70% {
+    transform: translateY(-50%) scale(1.5);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-100%) translateX(20px) scale(2);
+    opacity: 0;
+  }
+}
